<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.restapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_R"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="29dp"
        android:id="@+id/textView"
        android:layout_marginBottom="477dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="29dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameTV"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginLeft="28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="28dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_R"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="24dp"
        app:layout_constraintVertical_bias="0.015"
        android:id="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/nameTV"
        android:layout_marginStart="28dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addressTV"
        android:layout_marginRight="20dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginLeft="28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="28dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_R"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="28dp"
        android:id="@+id/textView3"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/addressTV"
        android:layout_marginStart="28dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailTV"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginLeft="28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="28dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fetch_userR"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toBottomOf="@+id/emailTV"
        android:layout_marginLeft="153dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/fetchBTN"
        android:layout_marginStart="139dp" />
    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/list_viewR"
    android:layout_marginTop="19dp"
    app:layout_constraintTop_toBottomOf="@+id/fetchBTN"
    android:layout_marginLeft="147dp"
    app:layout_constraintLeft_toLeftOf="parent"
    android:id="@+id/listBTN"
    android:layout_marginStart="139dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recycle_viewR"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/listBTN"
        android:layout_marginLeft="125dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/recycleBTN"
        android:layout_marginStart="139dp" />
</android.support.constraint.ConstraintLayout>
